--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,7 +43,7 @@
 border: none;
 }</string>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0">
        <property name="spacing">
         <number>10</number>
        </property>
@@ -54,12 +54,28 @@ border: none;
         <number>1</number>
        </property>
        <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
         <widget class="QComboBox" name="comboBox">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
          </property>
          <item>
           <property name="text">
@@ -99,28 +115,46 @@ border: none;
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_8">
+        <widget class="QToolButton" name="eraserButton">
          <property name="enabled">
           <bool>true</bool>
          </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="toolTip">
+          <string/>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QToolButton{
+border: none;
+background-color: rgba(255, 255, 255,0);
+}</string>
+         </property>
          <property name="text">
-          <string>Ластик</string>
+          <string>Eraser</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/eraser.png</normaloff>:/icons/eraser.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>21</width>
+           <height>21</height>
+          </size>
          </property>
          <property name="checkable">
           <bool>false</bool>
          </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Цвет</string>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
          </property>
         </widget>
        </item>
@@ -170,6 +204,95 @@ border: none;
           </property>
          </item>
         </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="clearButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QToolButton{
+border: none;
+background-color: rgba(255, 255, 255,0);
+}</string>
+         </property>
+         <property name="text">
+          <string>Clear</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/clear.png</normaloff>:/icons/clear.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>24</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="saveButton">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QToolButton{
+border: none;
+background-color: rgba(255, 255, 255,0);
+}</string>
+         </property>
+         <property name="text">
+          <string>Save</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>24</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -393,30 +516,13 @@ background-color: rgba(255, 255, 255,0);
      <height>20</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menumenu">
-    <property name="title">
-     <string>Меню</string>
-    </property>
-    <widget class="QMenu" name="menuExport">
-     <property name="title">
-      <string>Export</string>
-     </property>
-     <addaction name="actionImage"/>
-    </widget>
-    <addaction name="actionCreate_new_project"/>
-    <addaction name="menuExport"/>
-   </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
      <string>Правка</string>
     </property>
-    <addaction name="actioncopy"/>
-    <addaction name="actionpaste"/>
-    <addaction name="actionClear_canvas"/>
     <addaction name="actionSet_background_color"/>
     <addaction name="action_7"/>
    </widget>
-   <addaction name="menumenu"/>
    <addaction name="menu_2"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
@@ -427,64 +533,9 @@ background-color: rgba(255, 255, 255,0);
     <bool>false</bool>
    </attribute>
   </widget>
-  <action name="action">
-   <property name="text">
-    <string>Создать новый проект</string>
-   </property>
-  </action>
-  <action name="action_4">
-   <property name="text">
-    <string>Image</string>
-   </property>
-  </action>
-  <action name="action_5">
-   <property name="text">
-    <string>Набор изображений</string>
-   </property>
-  </action>
-  <action name="actionCreate_new_project">
-   <property name="text">
-    <string>Create new project</string>
-   </property>
-  </action>
-  <action name="actionImage">
-   <property name="text">
-    <string>Image</string>
-   </property>
-  </action>
-  <action name="actionclear_all">
-   <property name="text">
-    <string>clear list</string>
-   </property>
-  </action>
-  <action name="actioncopy">
-   <property name="text">
-    <string>Copy</string>
-   </property>
-  </action>
-  <action name="actionpaste">
-   <property name="text">
-    <string>paste</string>
-   </property>
-  </action>
-  <action name="actionClear_canvas">
-   <property name="text">
-    <string>Очистить фон</string>
-   </property>
-  </action>
-  <action name="action_2">
-   <property name="text">
-    <string>Сглаживание</string>
-   </property>
-  </action>
   <action name="actionSet_background_color">
    <property name="text">
     <string>Цвет фона</string>
-   </property>
-  </action>
-  <action name="action_6">
-   <property name="text">
-    <string>Сменить кисть</string>
    </property>
   </action>
   <action name="action_7">
