--- a/resources.qrc
+++ b/resources.qrc
@@ -9,8 +9,9 @@
     <qresource prefix="/">
         <file>icons/arrow_back.png</file>
         <file>icons/arrow_forward.png</file>
-        <file>icons/clear.png</file>
         <file>icons/icon.png</file>
         <file>icons/eraser.png</file>
+        <file>icons/clear.png</file>
+        <file>icons/save.png</file>
     </qresource>
 </RCC>
