--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,7 +31,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QGroupBox" name="">
+     <widget class="QGroupBox" name="headerGroupBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -41,6 +41,11 @@
       <property name="styleSheet">
        <string notr="true">QGroupBox {
 border: none;
+}
+
+QToolButton{
+border: none;
+background-color: rgba(255, 255, 255,0);
 }</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0">
@@ -54,7 +59,7 @@ border: none;
         <number>1</number>
        </property>
        <item>
-        <spacer name="horizontalSpacer_3">
+        <spacer name="leftHorizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -67,51 +72,44 @@ border: none;
         </spacer>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
+        <widget class="QToolButton" name="drawButton">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
          </property>
-         <property name="sizeAdjustPolicy">
-          <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
-         <item>
-          <property name="text">
-           <string>Кисть</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Прямоугольник</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Прерывистый прямоугольник</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Линия</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Прерывистая линия</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Окружность</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Прперывистая окружность</string>
-          </property>
-         </item>
+         <property name="contextMenuPolicy">
+          <enum>Qt::DefaultContextMenu</enum>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QToolButton::menu-indicator { image: none; }</string>
+         </property>
+         <property name="text">
+          <string>Draw</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/draw.png</normaloff>:/icons/draw.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>24</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+         <property name="arrowType">
+          <enum>Qt::NoArrow</enum>
+         </property>
         </widget>
        </item>
        <item>
@@ -146,8 +144,8 @@ background-color: rgba(255, 255, 255,0);
          </property>
          <property name="iconSize">
           <size>
-           <width>21</width>
-           <height>21</height>
+           <width>22</width>
+           <height>22</height>
           </size>
          </property>
          <property name="checkable">
@@ -282,7 +280,7 @@ background-color: rgba(255, 255, 255,0);
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_4">
+        <spacer name="rightHorizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -332,7 +330,7 @@ background-color: rgba(255, 255, 255,0);
      </widget>
     </item>
     <item>
-     <widget class="QGroupBox" name="">
+     <widget class="QGroupBox" name="footerGroupBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
