--- a/resources.qrc
+++ b/resources.qrc
@@ -13,5 +13,13 @@
         <file>icons/eraser.png</file>
         <file>icons/clear.png</file>
         <file>icons/save.png</file>
+        <file>icons/draw.png</file>
+        <file>icons/line.png</file>
+        <file>icons/rectangle.png</file>
+        <file>icons/pen.png</file>
+        <file>icons/circle.png</file>
+        <file>icons/circle_dashed.png</file>
+        <file>icons/line_dashed.png</file>
+        <file>icons/rectangle_dashed.png</file>
     </qresource>
 </RCC>
