--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,7 +48,7 @@ border: none;
 background-color: rgba(255, 255, 255,0);
 }</string>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0,0">
        <property name="spacing">
         <number>10</number>
        </property>
@@ -130,10 +130,7 @@ background-color: rgba(255, 255, 255,0);
           <string/>
          </property>
          <property name="styleSheet">
-          <string notr="true">QToolButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
-}</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Eraser</string>
@@ -166,6 +163,35 @@ background-color: rgba(255, 255, 255,0);
          </property>
          <property name="text">
           <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="colorButton">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Color</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/color.png</normaloff>:/icons/color.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>24</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
          </property>
         </widget>
        </item>
@@ -221,10 +247,7 @@ background-color: rgba(255, 255, 255,0);
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="styleSheet">
-          <string notr="true">QToolButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
-}</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Clear</string>
@@ -256,10 +279,7 @@ background-color: rgba(255, 255, 255,0);
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="styleSheet">
-          <string notr="true">QToolButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
-}</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Save</string>
@@ -514,25 +534,7 @@ background-color: rgba(255, 255, 255,0);
      <height>20</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menu_2">
-    <property name="title">
-     <string>Правка</string>
-    </property>
-    <addaction name="actionSet_background_color"/>
-    <addaction name="action_7"/>
-   </widget>
-   <addaction name="menu_2"/>
   </widget>
-  <action name="actionSet_background_color">
-   <property name="text">
-    <string>Цвет фона</string>
-   </property>
-  </action>
-  <action name="action_7">
-   <property name="text">
-    <string>Сменить кисть</string>
-   </property>
-  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
