--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,9 @@ border: none;
 QToolButton{
 border: none;
 background-color: rgba(255, 255, 255,0);
-}</string>
+}
+
+QToolButton::menu-indicator { image: none; }</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0">
        <property name="spacing">
@@ -86,7 +88,7 @@ background-color: rgba(255, 255, 255,0);
           <enum>Qt::DefaultContextMenu</enum>
          </property>
          <property name="styleSheet">
-          <string notr="true">QToolButton::menu-indicator { image: none; }</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Draw</string>
@@ -161,6 +163,9 @@ background-color: rgba(255, 255, 255,0);
            <bold>true</bold>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="text">
           <string>Color</string>
          </property>
@@ -183,37 +188,35 @@ background-color: rgba(255, 255, 255,0);
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox_2">
-         <item>
-          <property name="text">
-           <string>1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>5</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>10</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>20</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>40</string>
-          </property>
-         </item>
+        <widget class="QToolButton" name="sizeButton">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="text">
+          <string>Size</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/size.png</normaloff>:/icons/size.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>24</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
         </widget>
        </item>
        <item>
