--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,7 +26,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">font-family: 'Lato', sans-serif;</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -44,6 +44,8 @@ border: none;
 }
 
 QPushButton, QToolButton { 
+font-weight: bold;
+font-size:14px;
 border:none;
 qproperty-iconSize: 24px;
 width:50px;
@@ -87,6 +89,8 @@ QToolButton::menu-indicator { image: none; }
         <widget class="QToolButton" name="drawButton">
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -134,6 +138,8 @@ QToolButton::menu-indicator { image: none; }
          </property>
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -172,6 +178,8 @@ QToolButton::menu-indicator { image: none; }
         <widget class="QToolButton" name="colorButton">
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -207,6 +215,8 @@ QToolButton::menu-indicator { image: none; }
         <widget class="QToolButton" name="sizeButton">
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -248,6 +258,8 @@ QToolButton::menu-indicator { image: none; }
          </property>
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -283,6 +295,8 @@ QToolButton::menu-indicator { image: none; }
         <widget class="QToolButton" name="saveButton">
          <property name="font">
           <font>
+           <family>Lato</family>
+           <pointsize>-1</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -350,6 +364,11 @@ QToolButton::menu-indicator { image: none; }
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QGraphicsView {
+border: 1px solid #D6d6d6; 
+}</string>
+      </property>
       <property name="verticalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
@@ -378,16 +397,21 @@ border: none;
 }
 
 QPushButton, QToolButton { 
+font-weight: bold;
+font-size:14px;
 border:none;
 qproperty-iconSize: 24px;
 width:50px;
 height:50px;
 cursor: pointer;
+border-radius: 20px;
+background-color: #f1f1f1;
+padding:5px;
  }
 
 QPushButton:hover, QToolButton:hover {
 cursor: pointer;
-border-radius: 5px;
+
 background-color: #b3cccc;
 }
 
@@ -427,9 +451,100 @@ QToolButton::menu-indicator { image: none; }
          </property>
          <property name="maximumSize">
           <size>
-           <width>24</width>
-           <height>24</height>
+           <width>40</width>
+           <height>40</height>
           </size>
+         </property>
+         <property name="palette">
+          <palette>
+           <active>
+            <colorrole role="Button">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Base">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Window">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+           </active>
+           <inactive>
+            <colorrole role="Button">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Base">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Window">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+           </inactive>
+           <disabled>
+            <colorrole role="Button">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Base">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="Window">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>241</red>
+               <green>241</green>
+               <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+           </disabled>
+          </palette>
          </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
@@ -486,6 +601,7 @@ QToolButton::menu-indicator { image: none; }
          </property>
          <property name="font">
           <font>
+           <family>Lato</family>
            <pointsize>12</pointsize>
            <weight>75</weight>
            <bold>true</bold>
@@ -512,8 +628,14 @@ QToolButton::menu-indicator { image: none; }
          </property>
          <property name="maximumSize">
           <size>
-           <width>24</width>
-           <height>24</height>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="sizeIncrement">
+          <size>
+           <width>0</width>
+           <height>0</height>
           </size>
          </property>
          <property name="cursor">
@@ -567,7 +689,7 @@ QToolButton::menu-indicator { image: none; }
      <x>0</x>
      <y>0</y>
      <width>1025</width>
-     <height>20</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
