--- a/resources.qrc
+++ b/resources.qrc
@@ -21,5 +21,6 @@
         <file>icons/draw/line_dashed.png</file>
         <file>fonts/lato_regular.ttf</file>
         <file>fonts/lato_bold.ttf</file>
+        <file>icons/select.png</file>
     </qresource>
 </RCC>
