--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -276,6 +276,9 @@ QToolButton::menu-indicator { image: none; }
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
+         <property name="toolTip">
+          <string>Show/hide gridlines</string>
+         </property>
          <property name="text">
           <string>Show Grid</string>
          </property>
